# mariadb-serverless-engine

./: .gitignore  CMakeLists.txt  README.md
src/: connection_pool.cc  connection_pool.h  connection_pool_impl.h  ha_serverless.cc  ha_serverless.h  pageserver_client.cc  pageserver_client.h  safekeeper_client.cc  safekeeper_client.h  serverless_types.h
